--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -7,9 +7,9 @@
 
 <!-- Contenidos de la pagina -->
     <section class="ContenedorMapas"  style=" width: 100%; background-color: white">
-    <section class="card" style="width: 50%; text-align: center; background-color: rgba(10,180,197,0.7); margin: 10px 0px 0px 350px">
+    <section class="card" style="width: 50%;height: 50%; text-align: center; background-color: rgba(10,180,197,0.7); margin: 10px 0px 0px 350px">
         <h1 class="card" style="background-color: azure; text-decoration-line: underline">Chart</h1>
-        <div id="container" style="width: 75%; margin: 10px 0px 0px 90px; background-color: #0ab4c5" class="card" >
+        <div id="container" style="width: 75%; margin: 10px 0px 0px 90px; background-color: #aef4fc" class="card" >
         <canvas id="pie-chart"></canvas>
       </div>
 
