--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -55,6 +55,26 @@
     </section>
 
     <section class="card" style=" background-color:rgb(16,199,217);margin: 10px 0px 0px 350px; width: 50%;">
+    <h1 class="card" style="text-align: center; text-decoration-line: underline; background-color: azure">Conexiones</h1>
+        <table style="text-align: center; border-color: black" border='3'>
+            <tr style="text-align: center; color:black">
+                <th>Usuario</th>
+                <th>Estado</th>
+            </tr>
+    {% for conexion in conexiones %}
+            <tr>
+                <td style="color:yellow">{{ conexion.nombre }}</td>
+                {% if conexion.conexion == 'Desconectado' %}
+                <td class="card" style="color:#0e0e00; background-color: red; margin: auto">{{ conexion.conexion }}</td>
+                {% else %}
+                <td class="card" style="color:yellow; background-color: #0be70b; margin: auto">{{ conexion.conexion }}</td>
+                {% endif %}
+            </tr>
+    {% endfor %}
+    </table>
+    </section>
+
+    <section class="card" style=" background-color:rgb(16,199,217);margin: 10px 0px 0px 350px; width: 50%;">
     <h1 class="card" style="text-align: center; text-decoration-line: underline; background-color: azure">Map Hits</h1>
     <table style="text-align: center; border-color: black" border='3'>
             <tr style="text-align: center; color:black">
