--- a/templates/logout.html
+++ b/templates/logout.html
@@ -4,7 +4,9 @@
 
 {% block content %}
 
-<h2 class="ContenedorFormulario" style="text-align: center; color: white; height: 30%">Cerraste sesión con éxito!</h2>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+<section class="ContenedorFormulario"><h2  class="card" style="text-align: center; color: white; height: 30%; background-color: #20c997; margin: 90px 0px 0px 0px">Cerraste sesión con éxito!<i class="bi bi-check"></i></h2></section>
+
 
 {% endblock %}
 
